Refaktorowałem kod aby używał wzorców projektowych